--- a/09_API/05_memeApp/index.html
+++ b/09_API/05_memeApp/index.html
@@ -53,7 +53,7 @@
         }
         img{
             width: 90%;
-            height: auto%;
+            height: auto;
         }
         #image{
             display: flex;
