--- a/09_API/08_Pokemon/index.html
+++ b/09_API/08_Pokemon/index.html
@@ -24,6 +24,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 1rem;
         }
         .pokemonCard{
             background-color: #fff;
